# study-data-analytics

./: .gitignore
01-linear-algebra/: 02-vectors-part-1.ipynb  03-vectors-part-2-3d.ipynb  03-vectors-part-2.ipynb  04-vectors-part-3.ipynb  05-matrix-part-1.ipynb  pyproject.toml
02-type-hinting/: config.py  main.py  pyproject.toml  test.py
02-type-hinting/src/: config.py  coordinates.py  weather_api_service.py  weather_formatter.py
03-mathematics-decision-making/: 01-linear-solver.ipynb  README.md  pyproject.toml
study/01-linear-algebra/: 01-vectors-part-1.ipynb  02-vectors-part-2-3d.ipynb  02-vectors-part-2.ipynb  04-vectors-part-3.ipynb  main.py  pyproject.toml
